feat: change password added

--- a/frontend/src/app/pages/update-profile-page/update-profile-page.component.html
+++ b/frontend/src/app/pages/update-profile-page/update-profile-page.component.html
@@ -67,6 +67,8 @@
         </mat-form-field>
       </form>
 
+      <a routerLink="/user/profile/update/password">Change Password</a>
+
       <button mat-raised-button color="primary" (click)="updateProfile()">
         Confirm
       </button>
