--- a/frontend/src/app/pages/user-page/user-page.component.html
+++ b/frontend/src/app/pages/user-page/user-page.component.html
@@ -75,7 +75,7 @@
       </mat-expansion-panel>
     </div>
 
-    <div class="cards4">
+    <div class="card4">
       <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title>
@@ -94,7 +94,27 @@
       </mat-expansion-panel>
     </div>
 
-    <div class="cards5">
+    <div class="card5">
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            <b>Second Test</b>
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+
+        <mat-card class="card">
+          <mat-card-content>
+            <p>
+              In case the first tests result comes negative, the date for the
+              second test is automatically schedule, and you will receive an
+              e-mail.
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </mat-expansion-panel>
+    </div>
+
+    <div class="card6">
       <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title>
@@ -114,16 +134,22 @@
       </mat-expansion-panel>
     </div>
   </div>
-  <div>
+  <div class="information">
     <p>
       And always make sure you get you information about the <b>COVID-19</b> in
       a reliable information source, such as:
     </p>
     <p>
-      <a href="https://www.who.int/">WHO - World Health Organization</a>
+      <a href="https://www.who.int/"
+        >WHO - World Health Organization
+        <img src="../../../assets/WHO.png" alt="WHO" width="30" height="30"
+      /></a>
     </p>
     <p>
-      <a href="https://www.dgs.pt/">DGS - Direção Geral da Saúde</a>
+      <a href="https://www.dgs.pt/"
+        >DGS - Direção Geral da Saúde
+        <img src="../../../assets/DGS.png" alt="DGS" width="150" height="30"
+      /></a>
     </p>
   </div>
 </div>
