refactor: change names

--- a/frontend/src/app/pages/update-request-page/update-request-page.component.html
+++ b/frontend/src/app/pages/update-request-page/update-request-page.component.html
@@ -89,7 +89,7 @@
           </mat-form-field>
         </mat-expansion-panel>
       </form>
-      <input type="file" accept=".pdf" (change)="selectImage($event)" />
+      <input type="file" accept=".pdf" (change)="selectFile($event)" />
       <p>Request State: {{ request.requestState }}</p>
       <p>User State: {{ request.userState }}</p>
 
