--- a/frontend/src/app/pages/update-request-page/update-request-page.component.css
+++ b/frontend/src/app/pages/update-request-page/update-request-page.component.css
@@ -38,3 +38,26 @@
   align-items: center;
   width: 100%;
 }
+
+.custom-file-input {
+  color: transparent;
+}
+.custom-file-input::-webkit-file-upload-button {
+  visibility: hidden;
+}
+.custom-file-input::before {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  content: "Upload pdf";
+  color: #fff;
+  display: inline-block;
+  background: #3f51b5;
+
+  border-radius: 3px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+}
