--- a/frontend/src/app/pages/user-page/user-page.component.html
+++ b/frontend/src/app/pages/user-page/user-page.component.html
@@ -1,8 +1,8 @@
 <app-header-user></app-header-user>
+<mat-toolbar color="primary" class="toolbar">
+  <h2 class="toolbar-title">Welcome to Centro Regional de Análises</h2>
+</mat-toolbar>
 <div class="user-page-container">
-  <mat-toolbar color="primary" class="toolbar">
-    <h2>Welcome to Centro Regional de Análises</h2>
-  </mat-toolbar>
   <div class="description">
     <p>
       This iniciative seeks to help the local government control the spread of
