feat: complete user page

--- a/frontend/src/app/pages/user-page/user-page.component.css
+++ b/frontend/src/app/pages/user-page/user-page.component.css
@@ -1,7 +1,7 @@
 .user-page-container {
   width: 100%;
   max-width: 980px;
-  height: 89vh;
+  height: 83%;
   margin: 0 auto;
 
   display: flex;
@@ -34,10 +34,25 @@ mat-expansion-panel {
 .information {
   margin-top: 55px;
   width: 100%;
+  bottom: 0;
+  position: absolute;
+  background-color: #3f51b5;
+  color: white;
+  padding: 20px;
+}
+
+.information-content {
+  max-width: 980px;
+  margin: 0 auto;
+}
+
+.information * {
+  color: white;
 }
 
 .toolbar {
   border-radius: 0px;
+  width: 100%;
   width: 100%;
 }
 
@@ -45,4 +60,32 @@ mat-expansion-panel {
   width: 90%;
   max-width: 980px;
   margin: auto;
+  color: white;
+}
+
+p {
+  font-size: 16px;
+  color: #262626;
+}
+.title {
+  margin-bottom: 10px;
+}
+hr {
+  size: 5px;
+}
+
+hr {
+  border: 5px solid #3f51b5;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+h2 {
+  color: #262626;
+}
+
+.link {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
