feat: small change style user pages

--- a/frontend/src/app/pages/change-password-page/change-password-page.component.css
+++ b/frontend/src/app/pages/change-password-page/change-password-page.component.css
@@ -50,3 +50,12 @@ form {
   align-items: center;
   width: 50%;
 }
+
+.buttons {
+  margin-top: 10px;
+}
+
+.buttons * {
+  margin-right: 5px;
+  margin-left: 5px;
+}
