--- a/frontend/src/app/pages/change-password-page/change-password-page.component.html
+++ b/frontend/src/app/pages/change-password-page/change-password-page.component.html
@@ -28,12 +28,14 @@
       </mat-form-field>
     </form>
 
-    <button mat-raised-button color="primary" (click)="changePassword()">
-      Confirm
-    </button>
-    <button mat-raised-button color="primary" routerLink="/user/profile">
-      Cancel
-    </button>
+    <div class="buttons">
+      <button mat-raised-button color="primary" (click)="changePassword()">
+        Confirm
+      </button>
+      <button mat-raised-button color="primary" routerLink="/user/profile">
+        Cancel
+      </button>
+    </div>
   </div>
   <div *ngIf="success" class="successMessage">
     <h2>
