--- a/frontend/src/app/pages/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/pages/user-profile-page/user-profile-page.component.html
@@ -2,7 +2,7 @@
 <div class="request-container">
   <div class="content" *ngIf="user">
     <mat-toolbar color="primary" class="toolbar">
-      <h2>{{ user.nif }}</h2>
+      <h2>NIF:{{ user.nif }}</h2>
     </mat-toolbar>
     <div class="information">
       <p>Name: {{ user.name }}</p>
