feat: admin page with graphics and profile page added

--- a/frontend/src/app/components/header-admin/header-admin.component.html
+++ b/frontend/src/app/components/header-admin/header-admin.component.html
@@ -19,7 +19,7 @@
             <a>Employees</a>
           </li>
           <li>
-            <a>Profile</a>
+            <a routerLink="/admin/profile">Profile</a>
           </li>
           <li>
             <a (click)="logout()" routerLink="/login/">Logout</a>
