feat: go back button redirection to admin added

--- a/frontend/src/app/pages/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/pages/user-profile-page/user-profile-page.component.html
@@ -18,7 +18,7 @@
         >
           Update
         </button>
-        <button mat-raised-button color="primary" routerLink="/user/">
+        <button mat-raised-button color="primary" (click)="goBack()">
           Go Back
         </button>
       </div>
