feat: registration of employee added

--- a/frontend/src/app/components/header-admin/header-admin.component.html
+++ b/frontend/src/app/components/header-admin/header-admin.component.html
@@ -13,7 +13,7 @@
             <a routerLink="/admin/">Home</a>
           </li>
           <li>
-            <a>Create Employee</a>
+            <a routerLink="/admin/registerEmployee/">Create Employee</a>
           </li>
           <li>
             <a>Employees</a>
