fix: header on profile page fix

--- a/frontend/src/app/pages/register-page/register-page.component.html
+++ b/frontend/src/app/pages/register-page/register-page.component.html
@@ -1,3 +1,4 @@
+<app-header-admin *ngIf="user"></app-header-admin>
 <div class="register-container">
   <div class="content" *ngIf="!success">
     <section>
