feat: redirection to user profile added

--- a/frontend/src/app/pages/admin-users-page/admin-users-page.component.html
+++ b/frontend/src/app/pages/admin-users-page/admin-users-page.component.html
@@ -17,6 +17,7 @@
       *matCellDef="let element"
       class="nif"
       (click)="showUser(element.nif)"
+      routerLink="/admin/users/profile"
     >
       {{ element.nif }}
     </td>
