feat: restriction to update user added

--- a/frontend/src/app/pages/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/pages/user-profile-page/user-profile-page.component.html
@@ -16,6 +16,7 @@
           mat-raised-button
           color="primary"
           routerLink="/user/profile/update"
+          *ngIf="user.role === roleEmployee"
         >
           Update
         </button>
