fix: update profile button bug fix

--- a/frontend/src/app/pages/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/pages/user-profile-page/user-profile-page.component.html
@@ -16,7 +16,7 @@
           mat-raised-button
           color="primary"
           routerLink="/user/profile/update"
-          *ngIf="user.role === roleEmployee"
+          *ngIf="user.role === roleEmployee || user.nif === userLogged.nif"
         >
           Update
         </button>
