feat: routing improved

--- a/frontend/src/app/pages/change-password-page/change-password-page.component.html
+++ b/frontend/src/app/pages/change-password-page/change-password-page.component.html
@@ -32,7 +32,7 @@
       <button mat-raised-button color="primary" (click)="changePassword()">
         Confirm
       </button>
-      <button mat-raised-button color="primary" routerLink="/user/profile">
+      <button mat-raised-button color="primary" (click)="cancel()">
         Cancel
       </button>
     </div>
@@ -41,7 +41,7 @@
     <h2>
       Your password was updated.
     </h2>
-    <button mat-raised-button color="primary" routerLink="/user/profile">
+    <button mat-raised-button color="primary" (click)="confirmMessage()">
       Confirm
     </button>
   </div>
