--- a/frontend/src/app/pages/update-profile-page/update-profile-page.component.html
+++ b/frontend/src/app/pages/update-profile-page/update-profile-page.component.html
@@ -67,7 +67,7 @@
         </mat-form-field>
       </form>
 
-      <a routerLink="/user/profile/update/password">Change Password</a>
+      <a (click)="goChangePassword()">Change Password</a>
 
       <div class="buttons">
         <button mat-raised-button color="primary" (click)="updateProfile()">
