--- a/frontend/src/app/components/header-admin/header-admin.component.html
+++ b/frontend/src/app/components/header-admin/header-admin.component.html
@@ -16,7 +16,7 @@
             <a routerLink="/admin/registerEmployee/">Create Employee</a>
           </li>
           <li>
-            <a routerLink="/admin/users">Employees</a>
+            <a routerLink="/admin/users">Users</a>
           </li>
           <li>
             <a (click)="showProfile()" routerLink="/admin/profile">Profile</a>
