--- a/frontend/src/app/pages/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/pages/user-profile-page/user-profile-page.component.html
@@ -15,7 +15,7 @@
         <button
           mat-raised-button
           color="primary"
-          routerLink="/user/profile/update"
+          (click)="goUpdate()"
           *ngIf="user.role === roleEmployee || user.nif === userLogged.nif"
         >
           Update
