feat: added profile pages to employee

--- a/frontend/src/app/components/header-admin/header-admin.component.html
+++ b/frontend/src/app/components/header-admin/header-admin.component.html
@@ -19,7 +19,9 @@
             <a routerLink="/admin/users">Users</a>
           </li>
           <li>
-            <a (click)="showProfile()" routerLink="/admin/profile">Profile</a>
+            <a (click)="showProfile()" routerLink="/admin/profile"
+              >My Profile</a
+            >
           </li>
           <li>
             <a (click)="logout()" routerLink="/login/">Logout</a>
