feat: delete employee added

--- a/frontend/src/app/pages/user-profile-page/user-profile-page.component.css
+++ b/frontend/src/app/pages/user-profile-page/user-profile-page.component.css
@@ -43,3 +43,16 @@ button {
   align-items: center;
   width: 100%;
 }
+
+.successMessage {
+  padding-top: 50px;
+
+  padding-right: 96px;
+  padding-left: 96px;
+  padding-bottom: 96px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+}
