--- a/frontend/src/app/pages/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/pages/user-profile-page/user-profile-page.component.html
@@ -1,7 +1,7 @@
 <app-header-user *ngIf="user && user.role === roleUser"></app-header-user>
 <app-header-admin *ngIf="user && user.role === roleAdmin"></app-header-admin>
 <div class="request-container">
-  <div class="content" *ngIf="user">
+  <div class="content" *ngIf="user && !success">
     <mat-toolbar color="primary" class="toolbar">
       <h2>NIF:{{ user.nif }}</h2>
     </mat-toolbar>
@@ -20,11 +20,27 @@
         >
           Update
         </button>
+        <button
+          mat-raised-button
+          color="warn"
+          (click)="deleteUser()"
+          *ngIf="user.role === roleEmployee && userLogged.role === roleAdmin"
+        >
+          Delete
+        </button>
         <button mat-raised-button color="primary" (click)="goBack()">
           Go Back
         </button>
       </div>
     </div>
+  </div>
+  <div class="successMessage" *ngIf="success">
+    <h2>
+      User deleted.
+    </h2>
+    <button mat-raised-button color="primary" routerLink="/admin/users">
+      Confirm
+    </button>
   </div>
   <div *ngIf="!user">
     <mat-spinner></mat-spinner>
