feat: tests per user added

--- a/frontend/src/app/pages/admin-page/admin-page.component.html
+++ b/frontend/src/app/pages/admin-page/admin-page.component.html
@@ -29,4 +29,19 @@
       />
     </mat-card>
   </div>
+
+  <div class="testsPerUser">
+    <mat-card class="testsPerUser">
+      <mat-toolbar color="primary" class="toolbar">
+        <h2>Tests Per User</h2>
+      </mat-toolbar>
+      <img
+        src="https://quickchart.io/chart?c={type:'bar',data:{labels:[{{
+          usersIds
+        }}], datasets:[{label:'Tests', data:[{{
+          totalValues
+        }}], fill:false,borderColor:'blue'}]}}"
+      />
+    </mat-card>
+  </div>
 </div>
