--- a/frontend/src/app/pages/admin-page/admin-page.component.html
+++ b/frontend/src/app/pages/admin-page/admin-page.component.html
@@ -33,12 +33,12 @@
   <div class="testsPerUser">
     <mat-card class="testsPerUser">
       <mat-toolbar color="primary" class="toolbar">
-        <h2>Tests Per User</h2>
+        <h2>Requests Per User</h2>
       </mat-toolbar>
       <img
         src="https://quickchart.io/chart?c={type:'bar',data:{labels:[{{
           usersIds
-        }}], datasets:[{label:'Tests', data:[{{
+        }}], datasets:[{label:'Requests', data:[{{
           totalValues
         }}], fill:false,borderColor:'blue'}]}}"
       />
