fix: improvement register page

--- a/frontend/src/app/pages/register-page/register-page.component.css
+++ b/frontend/src/app/pages/register-page/register-page.component.css
@@ -112,3 +112,12 @@
   align-items: center;
   width: 50%;
 }
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+.buttons * {
+  margin-bottom: 10px;
+}
