fix:  fix logout

--- a/frontend/src/app/components/header-admin/header-admin.component.html
+++ b/frontend/src/app/components/header-admin/header-admin.component.html
@@ -24,7 +24,7 @@
             >
           </li>
           <li>
-            <a (click)="logout()" routerLink="/login/">Logout</a>
+            <a (click)="logout()" routerLink="/home/">Logout</a>
           </li>
         </ul>
       </nav>
