--- a/frontend/src/app/components/header-employee/header-employee.component.html
+++ b/frontend/src/app/components/header-employee/header-employee.component.html
@@ -21,7 +21,7 @@
             >
           </li>
           <li>
-            <a (click)="logout()" routerLink="/login/">Logout</a>
+            <a (click)="logout()" routerLink="/home/">Logout</a>
           </li>
         </ul>
       </nav>
