--- a/frontend/src/app/components/header-user/header-user.component.html
+++ b/frontend/src/app/components/header-user/header-user.component.html
@@ -17,7 +17,7 @@
             <a (click)="showProfile()" routerLink="/user/profile">My Profile</a>
           </li>
           <li>
-            <a routerLink="/login/" (click)="logout()">Logout</a>
+            <a routerLink="/home/" (click)="logout()">Logout</a>
           </li>
         </ul>
       </nav>
