feat: added kpis and status for users

--- a/frontend/src/app/pages/admin-page/admin-page.component.css
+++ b/frontend/src/app/pages/admin-page/admin-page.component.css
@@ -26,3 +26,14 @@ img {
   margin-right: 15px;
   margin-left: 15px;
 }
+
+.kpis {
+  padding-top: 30px;
+  width: 90%;
+  max-width: 980px;
+  margin: auto;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 20px;
+}
