--- a/frontend/src/app/pages/admin-page/admin-page.component.html
+++ b/frontend/src/app/pages/admin-page/admin-page.component.html
@@ -1,4 +1,44 @@
 <app-header-admin></app-header-admin>
+<div class="kpis">
+  <app-kpi
+    icon="https://img.icons8.com/cotton/64/000000/business-group.png"
+    text="Number Users"
+    resolte="125"
+    alt="Users"
+  ></app-kpi>
+  <app-kpi
+    icon="https://img.icons8.com/cotton/64/000000/business-group.png"
+    text="Number Employees"
+    resolte="125"
+    alt="Users"
+  ></app-kpi>
+  <app-kpi
+    icon="https://img.icons8.com/cotton/64/000000/business-group.png"
+    text="Number Admins"
+    resolte="125"
+    alt="Users"
+  ></app-kpi>
+  <app-kpi
+    icon="https://img.icons8.com/cotton/64/000000/business-group.png"
+    text="Total Request"
+    resolte="125"
+    alt="Users"
+  ></app-kpi>
+
+  <app-kpi
+    icon="https://img.icons8.com/cotton/64/000000/business-group.png"
+    text="Request Not Infected"
+    resolte="125"
+    alt="Users"
+  ></app-kpi>
+
+  <app-kpi
+    icon="https://img.icons8.com/cotton/64/000000/business-group.png"
+    text="Request Infected"
+    resolte="125"
+    alt="Users"
+  ></app-kpi>
+</div>
 <div class="container">
   <div class="firstTests">
     <mat-card class="firstTestsCard">
