--- a/frontend/src/app/pages/admin-page/admin-page.component.html
+++ b/frontend/src/app/pages/admin-page/admin-page.component.html
@@ -3,39 +3,40 @@
   <app-kpi
     icon="https://img.icons8.com/cotton/64/000000/business-group.png"
     text="Number Users"
-    resolte="125"
+    resolte="{{ totalUsers }}"
     alt="Users"
   ></app-kpi>
   <app-kpi
     icon="https://img.icons8.com/cotton/64/000000/business-group.png"
     text="Number Employees"
-    resolte="125"
-    alt="Users"
-  ></app-kpi>
-  <app-kpi
-    icon="https://img.icons8.com/cotton/64/000000/business-group.png"
-    text="Number Admins"
-    resolte="125"
+    resolte="{{ totalEmployees }}"
     alt="Users"
   ></app-kpi>
   <app-kpi
     icon="https://img.icons8.com/cotton/64/000000/business-group.png"
     text="Total Request"
-    resolte="125"
+    resolte="{{ totalRequests }}"
     alt="Users"
   ></app-kpi>
 
   <app-kpi
     icon="https://img.icons8.com/cotton/64/000000/business-group.png"
     text="Request Not Infected"
-    resolte="125"
+    resolte="{{ totalNegative }}"
     alt="Users"
   ></app-kpi>
 
   <app-kpi
     icon="https://img.icons8.com/cotton/64/000000/business-group.png"
     text="Request Infected"
-    resolte="125"
+    resolte="{{ totalPositive }}"
+    alt="Users"
+  ></app-kpi>
+
+  <app-kpi
+    icon="https://img.icons8.com/cotton/64/000000/business-group.png"
+    text="Request Suspect"
+    resolte="{{ totalSuspect }}"
     alt="Users"
   ></app-kpi>
 </div>
