--- a/frontend/src/app/pages/register-page/register-page.component.html
+++ b/frontend/src/app/pages/register-page/register-page.component.html
@@ -26,7 +26,9 @@
         [(ngModel)]="nif"
         name="nif"
         class="input"
-        type="text"
+        type="number"
+        min="100000000"
+        max="999999999"
         placeholder="NIF"
       />
       <input
