fix: headers fixed

--- a/frontend/src/app/pages/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/pages/user-profile-page/user-profile-page.component.html
@@ -1,5 +1,11 @@
-<app-header-user *ngIf="user && user.role === roleUser"></app-header-user>
-<app-header-admin *ngIf="user && user.role === roleAdmin"></app-header-admin>
+<app-header-user *ngIf="user && userLogged.role === roleUser"></app-header-user>
+<app-header-admin
+  *ngIf="user && userLogged.role === roleAdmin"
+></app-header-admin>
+<app-header-employee
+  *ngIf="user && userLogged.role === roleEmployee"
+></app-header-employee>
+
 <div class="request-container">
   <div class="content" *ngIf="user && !success">
     <mat-toolbar color="primary" class="toolbar">
