fix: login redirect

--- a/frontend/src/app/pages/login-page/login-page.component.html
+++ b/frontend/src/app/pages/login-page/login-page.component.html
@@ -19,6 +19,11 @@
       <button type="submit" class="button">
         Enter
       </button>
+
+      <div class="links">
+        <a routerLink="/register/">I don't have an account</a>
+        <a routerLink="/home/">Go back</a>
+      </div>
     </form>
   </section>
   <img src="../../../assets/doctors.svg" alt="Doctor" />
