--- a/frontend/src/app/pages/login-page/login-page.component.css
+++ b/frontend/src/app/pages/login-page/login-page.component.css
@@ -65,3 +65,14 @@ img {
   margin-right: 15%;
   margin-top: 110px;
 }
+
+.links {
+  display: flex;
+  justify-content: space-between;
+}
+
+.links * {
+  margin-top: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
