--- a/frontend/src/app/pages/register-page/register-page.component.html
+++ b/frontend/src/app/pages/register-page/register-page.component.html
@@ -21,7 +21,7 @@
       </div>
     </section>
 
-    <form (Submit)="handleRegister($event)">
+    <form (submit)="handleRegister($event)">
       <input
         [(ngModel)]="nif"
         name="nif"
