--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -43,3 +43,37 @@ header nav ul li a {
 header nav ul li a:hover {
   background: rgba(255, 255, 255, 0.15);
 }
+
+@media (max-width: 980px) {
+  header .container {
+    width: 90%;
+  }
+
+  header img {
+    width: 70px;
+    margin-left: 20px;
+    padding: 15px 0;
+  }
+
+  header nav ul li a {
+    font-size: 13px;
+    padding: 16px;
+  }
+}
+
+@media (max-width: 460px) {
+  header .container {
+    width: 90%;
+  }
+
+  header img {
+    width: 50px;
+    margin-left: 10px;
+    padding: 5px 0;
+  }
+
+  header nav ul li a {
+    font-size: 10px;
+    padding: 10px;
+  }
+}
